@@ -1,8 +1,10 @@
 debian-installer (2008xxxx) UNRELEASED; urgency=low
 
-  * 
+  * Test the a mirror supports the target suite and has a D-I section before
+    its added to sources.list.udeb. Should fix build failures on lxdebian for
+    s390, which includes an incomplete mirror in its /etc/apt/sources.list.
 
- -- Frans Pop <fjp@debian.org>  Wed, 28 May 2008 18:18:20 +0200
+ -- Frans Pop <fjp@debian.org>  Wed, 28 May 2008 18:22:41 +0200
 
 debian-installer (20080522) unstable; urgency=low
 
